--- a/themes/hugo-goa/static/css/main.css
+++ b/themes/hugo-goa/static/css/main.css
@@ -75,8 +75,12 @@ div.content
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
     font-weight: 300;
-
     color: #777;
+}
+.content img {
+    border: 2px solid #eee;
+    padding: 8px;
+    width: 100%;
 }
 .copyright
 {
@@ -112,6 +116,7 @@ div.content
 {
     font-family: 'Lato', sans-serif;
     font-size: 18px;
+    line-height: 24px;
     font-weight: 200;
 
     color: #555;
@@ -164,10 +169,11 @@ h3.intro
 {
     font-family: 'Roboto Slab', serif;
     font-size: 25px;
+    line-height: 30px;
     font-weight: 400;
 
     margin-top: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 .list-entry-link
 {
@@ -198,6 +204,7 @@ h3.intro
     font-family: 'Roboto', sans-serif;
     font-size: 12px;
     font-weight: 200;
+    margin-bottom: 0;
 
     color: #bbb;
 }
@@ -234,7 +241,7 @@ h6.meta
 {
     font-family: 'Roboto Slab', serif;
     font-weight: 400;
-
+    line-height: 44px;
     color: #555;
 }
 header.title
