--- a/themes/hugo-goa/layouts/partials/header.html
+++ b/themes/hugo-goa/layouts/partials/header.html
@@ -12,7 +12,7 @@
 
 <base href="{{ .Site.BaseURL }}">
 
-<title>{{ .Site.Title }}</title>
+<title>{{ if .Title }}{{ .Title }}{{ else }}{{ .Site.Title }}{{ end }}</title>
 
 {{ .Hugo.Generator }}
 
