--- a/themes/hugo-goa/layouts/partials/header.html
+++ b/themes/hugo-goa/layouts/partials/header.html
@@ -17,8 +17,8 @@
 {{ .Hugo.Generator }}
 
 {{ if .RSSLink }}
-  <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
-  <link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" />
+  <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ if .Title }}{{ .Title }}{{ else }}{{ .Site.Title }}{{ end }}" />
+  <link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ if .Title }}{{ .Title }}{{ else }}{{ .Site.Title }}{{ end }}" />
 {{ end }}
 
 {{ if .Site.Params.extra.highlightjs }}
