--- a/themes/hugo-goa/static/css/main.css
+++ b/themes/hugo-goa/static/css/main.css
@@ -74,7 +74,7 @@ div.content
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
     font-weight: 300;
-    color: #777;
+    color: #555;
 }
 .content img {
     border: 2px solid #eee;
@@ -109,7 +109,7 @@ div.content
 {
     margin-top: 150px;
 
-    color: #777;
+    color: #555;
 }
 .excerpt
 {
@@ -146,7 +146,7 @@ div.content
 {
     font-family: 'Roboto Slab', serif;
     font-weight: 200;
-    color: #777;
+    color: #526d7a;
     font-size: 24px;
     line-height: 32px;
 }
