--- a/themes/hugo-goa/static/css/main.css
+++ b/themes/hugo-goa/static/css/main.css
@@ -160,6 +160,14 @@ h3.intro
 
     margin-top: 50px;
 }
+.list ul {
+    padding: 0 10px;
+}
+@media(min-width: 380px) {
+    .list ul {
+        padding: 0 20px;
+    }
+}
 .list li
 {
     list-style: none;
