--- a/themes/hugo-goa/static/css/main.css
+++ b/themes/hugo-goa/static/css/main.css
@@ -273,17 +273,17 @@ header.title
     bottom: 4px;
     right: 4px;
     border-radius: 4px;
-    padding: 2px 10px;
-    font-size: 0.8em;
+    padding: 1px;
+    font-size: 0.7em;
     line-height: 1.8;
     color: #fff;
-    background-color: #746699;
-    min-width: 70px;
+    background-color: #777;
+    min-width: 55px;
     text-align: center;
     display: none;  /* Only show on wider viewports */
 }
 .highlight-copy-btn:hover {
-    background-color: #635683;
+    background-color: #666;
 }
 
 @media (min-width: 768px) {
@@ -291,7 +291,7 @@ header.title
         display: inline-block;
     }
     .highlight code {
-        margin-right: 75px;
+        margin-right: 60px;
     }
 }
 
