--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,8 +7,8 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-{{ with .Site.Params.meta.description }}<meta name="description" content="{{ . }}">{{ end }}
-{{ with .Site.Params.meta.keywords }}<meta name="keywords" content="{{.}}">{{ end }}
+<meta name="description" content="{{ if .Params.description }}{{ .Params.description }}{{ else }}{{ .Site.Params.meta.description }}{{ end }}">
+<meta name="keywords" content="{{ .Site.Params.meta.keywords }}">
 
 <base href="{{ .Site.BaseURL }}">
 
